--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <button onclick="inserir_Primeiro()">Inserir Primeiro</button><br>
     <button onclick="deletar_primeiro()">Deletar Primeiro</button><br>
     <button onclick="deletar_nome()">Deletar Nome</button><br>
+    <button onclick="limpar_lista()">Limpar Lista</button><br>
+    <button onclick="fazer_busca()">fazer Busca</button><br>
+    <button onclick="ordenar_az()">Ordenar Lista</button><br>
+    <button onclick="ordenar_za()">Ordenar Lista</button><br>
     <span id="lista"></span>
 </body>
 </html>
